# super-bot-python-v2

./: .env  API_README.md  EMAIL_IMPLEMENTATION.md  EMAIL_SETUP.md  README.md  main.py  pyproject.toml  test_email_notification.py
.github/: copilot-instructions.md
app/agent/: __init__.py
app/agent/graph/: trading_graph.py
app/agent/nodes/: __init__.py  crypto_news_sentiment_node.py  email_notification_node.py  executor_agent_node.py  fear_greed_node.py  skeptic_agent_node.py  strategist_agent_node.py  support_resistance_node.py  technical_analysis_node.py
app/agent/state/: agent_state.py
app/clients/: alpaca_crypto_bars_client.py  alpaca_news_client.py  email_client.py  fear_greed_client.py  indicators_sma_client.py
app/config/: settings.py
app/controller/trading/: __init__.py  routes.py  schemas.py
app/database/: __init__.py  connection.py  repository.py  transaction_repository.py
app/models/: alpaca_crypto_bars_models.py  alpaca_news_models.py  database_models.py  executor_models.py  fear_greed_models.py  indicators_sma_models.py  news_sentiment_models.py  skeptic_models.py  technical_analysis_models.py  trading_committee_models.py
app/utils/: __init__.py  agent_executor.py  openai_client.py  scheduler.py
