[project]
name = "superbotv2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.2",
    "uvicorn>=0.38.0",
    "httpx[http2]>=0.28.1",
    "langchain>=1.1.2",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "apscheduler>=3.10.0",
    "boto3>=1.34.0",
]


